--- a/parts/appwizard/pyqt/documentdetails.ui
+++ b/parts/appwizard/pyqt/documentdetails.ui
@@ -54,7 +54,7 @@
                         <cstring>textLabel2</cstring>
                     </property>
                     <property name="text">
-                        <string>Name</string>
+                        <string>Name:</string>
                     </property>
                 </widget>
                 <widget class="QLineEdit" row="0" column="1">
