--- a/parts/appwizard/vcs_form.ui
+++ b/parts/appwizard/vcs_form.ui
@@ -43,7 +43,7 @@
                 <cstring>textLabel1</cstring>
             </property>
             <property name="text">
-                <string>Version Control System:</string>
+                <string>Version control system:</string>
             </property>
         </widget>
         <widget class="QComboBox" row="0" column="1">
