--- a/parts/trollproject/filepropertybase.ui
+++ b/parts/trollproject/filepropertybase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>FilePropertyBase</class>
 <widget class="QDialog">
     <property name="name">
@@ -55,7 +55,7 @@
                 <cstring>buttonCancel</cstring>
             </property>
             <property name="text">
-                <string>Cancel</string>
+                <string>&amp;Cancel</string>
             </property>
         </widget>
         <widget class="QPushButton" row="2" column="1">
@@ -63,7 +63,7 @@
                 <cstring>buttonOk</cstring>
             </property>
             <property name="text">
-                <string>OK</string>
+                <string>&amp;OK</string>
             </property>
         </widget>
         <widget class="QLabel" row="0" column="0">
@@ -82,7 +82,7 @@
                 <property name="clickable">
                     <bool>false</bool>
                 </property>
-                <property name="resizeable">
+                <property name="resizable">
                     <bool>false</bool>
                 </property>
             </column>
