--- a/src/settingswidget.ui
+++ b/src/settingswidget.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>SettingsWidget</class>
 <widget class="QWidget">
     <property name="name">
@@ -69,7 +69,7 @@
                                 <cstring>buttonLabel</cstring>
                             </property>
                             <property name="text">
-                                <string>Window &amp;Font:</string>
+                                <string>Window &amp;font:</string>
                             </property>
                             <property name="buddy" stdset="0">
                                 <cstring>changeMessageFontButton</cstring>
@@ -157,7 +157,7 @@
                                                 <cstring>lineWrappingCheckBox</cstring>
                                             </property>
                                             <property name="text">
-                                                <string>Line &amp;Wrapping</string>
+                                                <string>Line &amp;wrapping</string>
                                             </property>
                                         </widget>
                                         <widget class="QCheckBox">
@@ -165,7 +165,7 @@
                                                 <cstring>dirNavigMsgCheckBox</cstring>
                                             </property>
                                             <property name="text">
-                                                <string>&amp;Directory Navigation Messages</string>
+                                                <string>&amp;Directory navigation messages</string>
                                             </property>
                                         </widget>
                                     </vbox>
@@ -290,7 +290,7 @@
                                 <cstring>buttonLabel_2</cstring>
                             </property>
                             <property name="text">
-                                <string>Window F&amp;ont:</string>
+                                <string>Window f&amp;ont:</string>
                             </property>
                             <property name="buddy" stdset="0">
                                 <cstring>changeApplicationFontButton</cstring>
