--- a/parts/filecreate/fctypeeditbase.ui
+++ b/parts/filecreate/fctypeeditbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>FCTypeEditBase</class>
 <widget class="QDialog">
     <property name="name">
@@ -19,12 +19,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
         <widget class="QLayoutWidget" row="0" column="0">
             <property name="name">
                 <cstring>layout5</cstring>
@@ -35,9 +29,6 @@
                 </property>
                 <property name="margin">
                     <number>0</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
                 </property>
                 <widget class="QLabel">
                     <property name="name">
@@ -71,12 +62,6 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>0</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
                 <spacer>
                     <property name="name">
                         <cstring>spacer1</cstring>
@@ -90,7 +75,7 @@
                     <property name="sizeHint">
                         <size>
                             <width>40</width>
-                            <height>0</height>
+                            <height>20</height>
                         </size>
                     </property>
                 </spacer>
@@ -126,9 +111,6 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
                 <widget class="QLabel">
                     <property name="name">
                         <cstring>textLabel3</cstring>
@@ -161,9 +143,6 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
                 <widget class="QLabel">
                     <property name="name">
                         <cstring>textLabel3_2</cstring>
@@ -185,6 +164,23 @@
                 </widget>
             </vbox>
         </widget>
+        <widget class="KIconButton" row="0" column="2" rowspan="2" colspan="1">
+            <property name="name">
+                <cstring>icon_url</cstring>
+            </property>
+            <property name="minimumSize">
+                <size>
+                    <width>80</width>
+                    <height>80</height>
+                </size>
+            </property>
+            <property name="focusPolicy">
+                <enum>StrongFocus</enum>
+            </property>
+            <property name="text">
+                <string></string>
+            </property>
+        </widget>
         <widget class="QLayoutWidget" row="2" column="0" rowspan="1" colspan="3">
             <property name="name">
                 <cstring>layout4</cstring>
@@ -192,12 +188,6 @@
             <vbox>
                 <property name="name">
                     <cstring>unnamed</cstring>
-                </property>
-                <property name="margin">
-                    <number>0</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
                 </property>
                 <widget class="QLabel">
                     <property name="name">
@@ -265,16 +255,23 @@
     <tabstop>typeext_edit</tabstop>
     <tabstop>typename_edit</tabstop>
     <tabstop>typedescr_edit</tabstop>
+    <tabstop>icon_url</tabstop>
     <tabstop>template_url</tabstop>
     <tabstop>ok_button</tabstop>
     <tabstop>cancel_button</tabstop>
 </tabstops>
 <includes>
-    <include location="local" impldecl="in implementation">kicondialog.h</include>
     <include location="local" impldecl="in implementation">fctypeeditbase.ui.h</include>
+    <include location="local" impldecl="in implementation">kicondialog.h</include>
 </includes>
 <slots>
     <slot>init()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
+<includehints>
+    <includehint>kiconbutton.h</includehint>
+    <includehint>kurlrequester.h</includehint>
+    <includehint>klineedit.h</includehint>
+    <includehint>kpushbutton.h</includehint>
+</includehints>
 </UI>
